--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@
 
 # Ignore database.yml file
 config/database.yml
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
